// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Error /> should render correctly with full props 1`] = `
<Error
  error="ERROR"
  errorInfo="Info"
  showReload={true}
  title="title"
>
  <_default
    withMargin={true}
  >
    <styled__Wrapper>
      <div
        className="styled__Wrapper-sc-1g40xjj-0 fFtIze"
      >
        <styled__InnerWrapper
          className="_test-inner-wrapper"
          withMargin={true}
        >
          <div
            className="_test-inner-wrapper styled__InnerWrapper-sc-1g40xjj-1 bRVfRH"
          >
            <styled__PageTitle>
              <h3
                className="styled__PageTitle-sc-160agpm-0 dnrbTB"
              >
                title
              </h3>
            </styled__PageTitle>
            <_default
              onClick={[Function]}
              pill={true}
              theme="blue-gradient"
            >
              <styled__Wrapper
                onClick={[Function]}
                pill={true}
                theme="blue-gradient"
                type="button"
              >
                <button
                  className="styled__Wrapper-sc-6m8pxr-0 bJTQMf"
                  onClick={[Function]}
                  type="button"
                >
                  Refresh
                </button>
              </styled__Wrapper>
            </_default>
            <styled__Details>
              <details
                className="styled__Details-sc-160agpm-1 cyDxZW"
              >
                <summary>
                  ERROR
                </summary>
                <br />
                Info
              </details>
            </styled__Details>
          </div>
        </styled__InnerWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</Error>
`;

exports[`<Error /> should render correctly with mandatory props 1`] = `
<Error
  error="ERROR"
  title="title"
>
  <_default
    withMargin={true}
  >
    <styled__Wrapper>
      <div
        className="styled__Wrapper-sc-1g40xjj-0 fFtIze"
      >
        <styled__InnerWrapper
          className="_test-inner-wrapper"
          withMargin={true}
        >
          <div
            className="_test-inner-wrapper styled__InnerWrapper-sc-1g40xjj-1 bRVfRH"
          >
            <styled__PageTitle>
              <h3
                className="styled__PageTitle-sc-160agpm-0 dnrbTB"
              >
                title
              </h3>
            </styled__PageTitle>
            <styled__Details>
              <details
                className="styled__Details-sc-160agpm-1 cyDxZW"
              >
                <summary>
                  ERROR
                </summary>
                <br />
              </details>
            </styled__Details>
          </div>
        </styled__InnerWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</Error>
`;
